--- a/src/components/desire/desire.module.scss
+++ b/src/components/desire/desire.module.scss
@@ -70,7 +70,7 @@
 		padding: 0.2em 1em;
 		margin: -1px 0 0 1em;
 		color: #fff;
-		background-color: chartreuse;
+		background-color: #8fb50c;
 		font-weight: 500;
 		height: calc(100% + 1px);
 		&:hover {
