--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -25,6 +25,7 @@
 .card_header {
 }
 .card_header_control {
+	z-index: 5;
 	background-color: rgba(255, 255, 255, 0.5);
 	width: 100%;
 	position: absolute;
