--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -77,9 +77,11 @@
 }
 .heart {
 	width: 1.5em;
+	cursor: pointer;
 }
 .libra {
 	width: 1.5em;
+	cursor: pointer;
 }
 .nav_item {
 	padding: 0.5em 1em;
