--- a/src/components/interesting-lots/interesting-lots.module.scss
+++ b/src/components/interesting-lots/interesting-lots.module.scss
@@ -49,6 +49,7 @@
 	align-content: center;
 	justify-content: space-between;
 	span {
+		cursor: pointer;
 		padding: 0.5em 1em;
 		img {
 			width: 1.5em;
