--- a/src/components/my-offers/offers.module.scss
+++ b/src/components/my-offers/offers.module.scss
@@ -155,6 +155,7 @@
 	justify-content: space-between;
 	position: relative;
 	span {
+		cursor: pointer;
 		padding: 0.5em 1em;
 		img {
 			width: 1.5em;
@@ -192,6 +193,7 @@
 		right: 5%;
 		transform: translateY(-25%);
 		width: 3.4em;
+		cursor: pointer;
 	}
 	@media screen and (max-width: 768px) {
 		grid-column: span 1;
