--- a/src/components/main-list/desires-list.module.scss
+++ b/src/components/main-list/desires-list.module.scss
@@ -104,9 +104,9 @@
 .lot_img_holder {
 	width: 100%;
 	overflow: hidden;
-	display: grid;
-	justify-content: center;
-	align-items: center;
+	//display: grid;
+	//justify-content: center;
+	//align-items: center;
 }
 .card_info {
 	position: relative;
