--- a/src/components/helpers/carousel.module.scss
+++ b/src/components/helpers/carousel.module.scss
@@ -2,13 +2,22 @@
 
 }
 .carousel {
-
+	height: 20em;
+	width: 100%;
+	overflow: hidden;
+	display: grid;
+	//justify-content: center;
+	justify-items: center;
+	align-items: center;
+	align-content: center;
+	position: relative;
 	iframe {
 		width: 100%;
 		height: 20em;
 	}
 	img {
-
+		height: 100%;
+		//width: 100%;
 	}
 	&::before {
 		content: "";
@@ -21,7 +30,10 @@
 }
 .arrow_forvard,
 .arrow_back {
-
+	top: 30%;
+	z-index: 10;
+	font-size: 3em;
+	position: absolute;
 	&:hover {
 		transition: 0.3s;
 		background-color: rgba(0, 0, 0, 0.3);
@@ -32,10 +44,10 @@
 	}
 }
 .arrow_back {
-
+	left: 0;
 }
 .arrow_forvard {
-
+right: 0;
 }
 
 .spinner {
