--- a/src/components/main-list/desires-list.module.scss
+++ b/src/components/main-list/desires-list.module.scss
@@ -73,11 +73,11 @@
 .card {
 	color: #383b42;
 	position: relative;
-	height: 32em;
+	height: 27em;
 	background-color: #ffb400;
 	display: grid;
 	grid-template-rows: 3fr 1fr;
-	//overflow: hidden;
+	overflow: hidden;
 }
 .card_header {
 }
@@ -103,10 +103,11 @@
 }
 .lot_img_holder {
 	width: 100%;
+	height: 20em;
 	overflow: hidden;
-	//display: grid;
-	//justify-content: center;
-	//align-items: center;
+	display: grid;
+	justify-content: center;
+	align-items: center;
 }
 .card_info {
 	position: relative;
@@ -119,6 +120,7 @@
 	}
 }
 .card_price {
+	white-space: nowrap;
 	color: #383b42;
 	font-weight: 500;
 	font-size: 1.8em;
