validator form fields, debug

--- a/src/components/desire/desire.module.scss
+++ b/src/components/desire/desire.module.scss
@@ -9,8 +9,8 @@
 	height: 24em;
 	background-color: #0c9bb5;
 	display: grid;
-	justify-items:  center;
-	align-items: center;
+	//justify-items:  center;
+	//align-items: center;
 	overflow: hidden;
 	position: relative;
 	img {
