--- a/src/components/desire/offers.module.scss
+++ b/src/components/desire/offers.module.scss
@@ -16,8 +16,9 @@
 }
 .card_image {
 	background-color: #0c9bb5;
-	height: 18em;
+	height: 20em;
 	overflow: hidden;
+	position: relative;
 }
 .card_info_block {
 	padding: 1em;
