--- a/src/components/helpers/carousel.module.scss
+++ b/src/components/helpers/carousel.module.scss
@@ -16,8 +16,8 @@
 		height: 20em;
 	}
 	img {
-		height: 100%;
-		//width: 100%;
+		height: 20em;
+		width: 100%;
 	}
 	&::before {
 		content: "";
@@ -30,6 +30,7 @@
 }
 .arrow_forvard,
 .arrow_back {
+	cursor: pointer;
 	top: 30%;
 	z-index: 10;
 	font-size: 3em;
