--- a/src/components/interesting-lots/interesting-lots.module.scss
+++ b/src/components/interesting-lots/interesting-lots.module.scss
@@ -7,8 +7,8 @@
 		list-style: none;
 		padding: 0;
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		grid-gap: 1em;
+		grid-template-columns: repeat(4, 24%);
+		grid-gap: 2.5%;
 		li {
 		}
 	}
@@ -35,6 +35,7 @@
 	background-color: #d75359;
 	display: grid;
 	grid-template-rows: 3fr 1fr;
+	overflow: hidden;
 }
 .card_header {
 	position: relative;
@@ -59,7 +60,13 @@
 .lot_img_holder {
 	width: 100%;
 	overflow: hidden;
+	height: 12em;
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
 	img {
+		width: 100%;
 	}
 }
 .green_sign {
