--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -37,6 +37,7 @@
 	align-content: center;
 	justify-content: space-between;
 	span {
+		cursor: pointer;
 		padding: 0.5em 1em;
 		img {
 			width: 1.5em;
