--- a/src/components/my-offers/offers.module.scss
+++ b/src/components/my-offers/offers.module.scss
@@ -56,13 +56,15 @@
 	background-color: #0c9bb5;
 	overflow: hidden;
 	display: grid;
-	justify-content: center;
+	//justify-content: center;
 	align-items: center;
 	position: relative;
-	@media screen and (max-width: 768px) {
-		height: 18em;
-	}
-	span {
+	height: 20em;
+	//@media screen and (max-width: 768px) {
+	//	height: 18em;
+	//}
+	.offer_place {
+		z-index: 999;
 		position: absolute;
 		top: 1em;
 		left: 1em;
@@ -74,9 +76,9 @@
 		width: 1.3em;
 		height: 1.3em;
 	}
-	img {
-		height: 18em;
-	}
+	//img {
+	//	height: 18em;
+	//}
 }
 .card_info_block {
 	padding: 1em;
