form video validation, photo

--- a/src/components/my-desires/my-desire.module.scss
+++ b/src/components/my-desires/my-desire.module.scss
@@ -2,7 +2,7 @@
 	display: grid;
 	grid-gap: 1em;
 }
-.red_list_heading {
+.desires_list_heading {
 	background-color: #fff;
 	font-size: 1.8em;
 	text-align: center;
