--- a/src/components/desire/user.module.scss
+++ b/src/components/desire/user.module.scss
@@ -5,16 +5,17 @@
 	background-color: #fff;
 }
 .user_ava {
-	margin: 0 auto;
-	width: 10em;
-	height: 10em;
 	border-radius: 50%;
-	background-color: #000;
-	display: flex;
+	overflow: hidden;
+	height: 10em;
+	width: 10em;
+	margin: 2em auto;
+	display: grid;
 	justify-content: center;
 	align-items: center;
 	img {
 		width: 100%;
+		height: 100%;
 	}
 }
 .location {
@@ -33,14 +34,13 @@
 }
 
 .days_on_egolist {
+	font-weight: 800;
 	text-align: center;
 	span:nth-child(1) {
 		font-size: 2.2em;
-		font-weight: 600;
 		margin-right: 0.1em;
 	}
 	span:nth-child(2) {
 		font-size: 1em;
-		font-weight: 700;
 	}
 }
