--- a/src/components/update-desire/update.module.scss
+++ b/src/components/update-desire/update.module.scss
@@ -1,12 +1,35 @@
-.update_form {
-	display: grid;
+.update_page {
+	height: 100%;
+	background-color: #fff;
+	padding: 1em;
 }
-.priorities,
+.btn_back {
+	border: 1px solid black;
+	padding: .3em 1em;
+}
+
+
+.update_form {
+	label,
+	legend {
+		font-size: 1.2em;
+		font-weight: bold;
+	}
+}
+.priorities {
+	display: grid;
+	label {
+		font-weight: normal;
+	}
+}
 .types {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr;
 	div {
-		grid-column: span 3;
+		grid-column: span 2;
+	}
+	label {
+		font-weight: normal;
 	}
 }
 
@@ -30,21 +53,23 @@
 	}
 	img {
 		width: 100%;
-		//height: 5em;
+		height: 5em;
 	}
 }
+.btn_remove_photo {
+	width: 1em;
+	height: 1.5em;
+	display: grid;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
+	align-content: center;
+}
 
-//.checkedValue {
-//	position: relative;
-//	&::before {
-//		position: absolute;
-//		top: 50%;
-//		left: 50%;
-//		transform: translate(-50%, -50%);
-//		content: '';
-//		width: 5px;
-//		height: 5px;
-//		border-radius: 50%;
-//		background: red;
-//	}
-//}
+.photo_inputs {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: .5em;
+	overflow: hidden;
+	width: 100%;
+}
