--- a/src/components/my-offers/offers.module.scss
+++ b/src/components/my-offers/offers.module.scss
@@ -157,7 +157,7 @@
 	align-items: center;
 	align-content: center;
 	align-self: start;
-	justify-content: space-between;
+	justify-content: flex-end;
 	position: relative;
 	span {
 		cursor: pointer;
