--- a/src/components/update-desire/update.module.scss
+++ b/src/components/update-desire/update.module.scss
@@ -57,13 +57,18 @@
 	}
 }
 .btn_remove_photo {
-	width: 1em;
+	font-weight: 600;
+	width: 1.5em;
 	height: 1.5em;
 	display: grid;
 	justify-content: center;
 	text-align: center;
 	align-items: center;
 	align-content: center;
+	background-color: rgba(255, 0, 0, 0.5);
+	border-radius: .1em;
+	color: #fff;
+	cursor: pointer;
 }
 
 .photo_inputs {
