--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -15,6 +15,7 @@
 		width: 100%;
 		@media screen and (max-width: 768px) {
 			display: grid;
+			grid-template-columns: 2fr 2fr 1fr;
 			grid-gap: 1em;
 			justify-content: center;
 		}
