--- a/src/components/desire/desire.module.scss
+++ b/src/components/desire/desire.module.scss
@@ -22,6 +22,9 @@
 	grid-template-columns: 3fr 1fr;
 	grid-gap: 1em;
 	padding: 1em;
+	@media screen and (max-width: 767px) {
+		grid-template-columns: 1fr;
+	}
 }
 .card_control {
 	display: flex;
@@ -57,13 +60,17 @@
 	margin-top: 1em;
 	border: 1px solid #000;
 	white-space: nowrap;
-	display: inline-block;
+	display: block;
+	width: 100%;
 }
 
 .desire_view {
 	display: grid;
 	grid-template-columns: 3fr 1fr;
 	grid-column-gap: 1em;
+	@media screen and (max-width: 767px) {
+		grid-template-columns: 1fr;
+	}
 }
 .show_offers {
 	background-color: #555;
@@ -80,5 +87,8 @@
 			color: #fff;
 			background-color: #5db900;
 		}
+	}
+	@media screen and (max-width: 767px) {
+		grid-column: span 1;
 	}
 }
