--- a/src/components/add-offer/add-form.module.scss
+++ b/src/components/add-offer/add-form.module.scss
@@ -6,6 +6,11 @@
 		text-align: center;
 		padding: 0.3em 1em;
 	}
+	@media screen and (max-width: 700px) {
+		h3 {
+			padding: .3em 0;
+		}
+	}
 }
 
 .add_lot_form {
@@ -21,9 +26,12 @@
 
 	form {
 		display: grid;
-		grid-gap: 0.5em;
 		grid-gap: 1em;
 		grid-template-columns: 3fr 2fr;
+		width: 100%;
+		@media screen and (max-width: 700px) {
+			grid-template-columns: 1fr;
+		}
 		label,
 		legend {
 			width: 100%;
@@ -42,6 +50,7 @@
 			display: grid;
 			grid-template-columns: repeat(2, 1fr);
 			align-items: center;
+
 			label {
 				white-space: nowrap;
 			}
@@ -50,6 +59,12 @@
 			}
 			input {
 				margin-left: 0.5em;
+			}
+			@media screen and (max-width: 700px) {
+				grid-template-columns: 1fr;
+				legend {
+					grid-column: span 1;
+				}
 			}
 		}
 	}
