--- a/src/components/desire/carousel.module.scss
+++ b/src/components/desire/carousel.module.scss
@@ -3,6 +3,7 @@
   max-height: 24em;
   overflow: hidden;
   display: grid;
+
   align-items: center;
   justify-items: center;
   //justify-content: center;
@@ -13,7 +14,7 @@
   }
   img {
     width: 100%;
-    height: 24em;
+    //max-height: 24em;
   }
   //&::before {
   //  content: "";
