--- a/src/components/my-offers/offers.module.scss
+++ b/src/components/my-offers/offers.module.scss
@@ -132,7 +132,7 @@
 }
 .card_control_block {
 	display: grid;
-	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
 	justify-items: center;
 	padding: 2em 0;
 	background-color: #fbfbfb;
@@ -155,10 +155,11 @@
 	font-weight: 700;
 }
 .open {
+	white-space: nowrap;
 	font-size: 1.3em;
 	font-weight: 700;
 	padding: 0.3em 0;
-	width: 7.5em;
+	//width: 7.5em;
 	background-color: #fff !important;
 }
 .card_control_header {
