--- a/src/components/update-desire/update-desire.module.scss
+++ b/src/components/update-desire/update-desire.module.scss
@@ -11,10 +11,15 @@
 
 .update_form {
 	display: grid;
+	grid-template-columns: 5fr 3fr;
+	gap: 1em;
 	label,
 	legend {
 		font-weight: bold;
 		font-size: 1.2em;
+	}
+	@media screen and (max-width: 700px) {
+		grid-template-columns: 1fr;
 	}
 }
 
@@ -22,6 +27,9 @@
 	display: grid;
 	gap: .5em;
 	grid-template-columns: 1fr 1fr;
+	@media screen and (max-width: 1270px) {
+		grid-template-columns: 1fr;
+	}
 }
 .photo_list {
 	display: grid;
@@ -33,15 +41,25 @@
 	div {
 		position: relative;
 		.btn_remove_photo {
+			z-index: 1;
 			padding: .1em .4em;
 			position: absolute;
 			top: 0;
 			right: 0;
 			opacity: .7;
+			background-color: red;
+			cursor: pointer;
+			color: #fff;
 		}
 	}
 	img {
 		width: 100%;
 		height: 5em;
+	}
+}
+
+.priorities, .types {
+	label {
+		font-weight: normal;
 	}
 }
