input mask, admin users list, verification, cabinet chat, user verification

--- a/src/components/chat/chat.module.scss
+++ b/src/components/chat/chat.module.scss
@@ -274,6 +274,20 @@ Message Box
   //  color: transparent;
   //}
 
+  .file {
+    width: 1em;
+    height: 1em;
+    position: absolute;
+    z-index: 1;
+    right: 5.2em;
+    font-size: 1.5em;
+    color: #ccc;
+    cursor: pointer;
+    input {
+      visibility: hidden;
+    }
+  }
+
   .message_submit {
     position: absolute;
     z-index: 1;
