--- a/src/components/cabinet/cabinet.module.scss
+++ b/src/components/cabinet/cabinet.module.scss
@@ -3,3 +3,10 @@
   padding: 1em;
   height: 100%;
 }
+
+.cabinet_control_buttons {
+  @media screen and (max-width: 500px) {
+    display: grid;
+    gap: 1em;
+  }
+}
