--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -32,8 +32,8 @@
 	justify-content: center;
 	align-items: center;
 	img {
-		width: 100%;
-		//height: 100%;
+		//width: 100%;
+		height: 100%;
 	}
 }
 .user_info {
