--- a/src/components/create-offer-lot/add-form.module.scss
+++ b/src/components/create-offer-lot/add-form.module.scss
@@ -19,6 +19,7 @@
 	display: grid;
 	grid-gap: 1em;
 	.btn_back {
+		cursor: pointer;
 		padding: 0.1em 1em;
 		border: 1px solid #000;
 		width: fit-content;
