--- a/src/components/desire/offers.module.scss
+++ b/src/components/desire/offers.module.scss
@@ -102,6 +102,7 @@
 	align-self: start;
 	justify-content: space-between;
 	span {
+		cursor: pointer;
 		position: relative;
 		padding: 0.5em 1em;
 		img {
@@ -111,6 +112,31 @@
 }
 .toast {
 	position: absolute;
+	padding: .5em;
+	z-index: 10;
+	background-color: #fff;
+	border-radius: 0.3em;
+	border: 1px solid #ccc;
+	display: grid;
+	box-shadow: 0 0 10px 2px rgba(53, 53, 53, 0.27);
+	span, button, a {
+		text-align: center;
+		text-decoration: none;
+		color: #000;
+		background-color: #fff;
+		border: none;
+		border-bottom: 1px solid #eee;
+		padding: 0.1em 0.5em;
+		border-radius: 0;
+		&:hover {
+			border-radius: 0;
+			color: #000;
+			border: none;
+			border-bottom: 1px solid #999;
+			transition: 0.3s;
+			background-color: #fafafa;
+		}
+	}
 }
 .progress_bar {
 	display: grid;
