--- a/src/components/main-list/desires-list.module.scss
+++ b/src/components/main-list/desires-list.module.scss
@@ -90,8 +90,10 @@
   display: grid;
   grid-template-rows: 3fr 1fr;
   overflow: hidden;
+  position: relative;
 }
 .card_header {
+  position: relative;
 }
 .card_header_control {
   background-color: rgba(255, 255, 255, 0.5);
@@ -118,7 +120,8 @@
   height: 20em;
   overflow: hidden;
   display: grid;
-  justify-content: center;
+  justify-items: center;
+  //justify-content: center;
   align-items: center;
 }
 .card_info {
@@ -153,6 +156,7 @@
 
 .toast {
   position: absolute;
+  padding: .5em;
   top: 0.5em;
   left: 50%;
   transform: translateX(-40%);
@@ -162,13 +166,20 @@
   border: 1px solid #ccc;
   display: grid;
   box-shadow: 0 0 10px 2px rgba(53, 53, 53, 0.27);
-  span {
-    padding: 0.3em 1em;
-    border-bottom: 1px solid #fff;
+  span, button {
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-bottom: 1px solid #eee;
     padding: 0.1em 0.5em;
+    border-radius: 0;
     &:hover {
+      border-radius: 0;
+      color: #000;
+      border: none;
+      border-bottom: 1px solid #999;
       transition: 0.3s;
-      background-color: #eee;
+      background-color: #fafafa;
     }
   }
 }
