--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -98,6 +98,7 @@
 	position: absolute;
 	top: 0.5em;
 	left: 50%;
+	padding: .5em;
 	transform: translateX(-40%);
 	z-index: 10;
 	background-color: #fff;
@@ -105,13 +106,22 @@
 	border: 1px solid #ccc;
 	display: grid;
 	box-shadow: 0 0 10px 2px rgba(53, 53, 53, 0.27);
-	span {
-		padding: 0.3em 1em;
-		border-bottom: 1px solid #fff;
+	span, button, a {
+		text-align: center;
+		text-decoration: none;
+		color: #000;
+		background-color: #fff;
+		border: none;
+		border-bottom: 1px solid #eee;
 		padding: 0.1em 0.5em;
+		border-radius: 0;
 		&:hover {
+			border-radius: 0;
+			color: #000;
+			border: none;
+			border-bottom: 1px solid #999;
 			transition: 0.3s;
-			background-color: #eee;
+			background-color: #fafafa;
 		}
 	}
 }
