google, facebook login libs

--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -2,3 +2,9 @@
   background-color: #fff;
   min-height: 100vh;
 }
+
+.facebook_icon, .google_icon {
+  width: 2em;
+  margin-left: .5em;
+  filter: invert(1);
+}
