--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -29,7 +29,7 @@
 	width: 10em;
 	margin: 2em auto;
 	display: grid;
-	justify-content: center;
+	justify-items: center;
 	align-items: center;
 	img {
 		//width: 100%;
