--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -18,3 +18,14 @@
   top: 2.4em;
   right: 1em;
 }
+
+.login_with_google_facebook_block {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  justify-items: center;
+  gap: 2em;
+  @media screen and (max-width: 767px) {
+    grid-template-columns: 1fr;
+  }
+}
