--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,17 +1,23 @@
 .layout {
-	max-width: 1580px;
+	max-width: 2020px;
 	margin: 0 auto;
 	min-height: 100vh;
 	width: 100%;
 	display: grid;
 	grid-template-rows: auto 1fr;
 	grid-template-columns: 2fr 5fr;
-	grid-gap: 1em;
-	padding: 5rem 1em;
+	grid-column-gap: 2rem;
+	grid-row-gap: 1.5rem;
+	padding: 10rem 1rem;
 	position: relative;
 	@media screen and (max-width: 1024px) {
 		grid-template-columns: 1fr;
 		grid-template-rows: min-content;
+	}
+	main {
+		overflow: auto;
+		border-radius: 1em;
+		background: linear-gradient(to right, #383d43, #31353b);
 	}
 }
 
@@ -32,4 +38,6 @@
 }
 
 .sidebar_holder {
+	grid-row: span 2;
+	margin-top: -2rem;
 }
