--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -1,13 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap");
+
 .categories {
-	background-color: #fff;
-	padding: 2em 1em;
-	font-weight: 500;
-
-	h3 {
-		text-align: center;
-		margin-bottom: 0.7em;
-	}
-
 	select {
 		display: none;
 		@media screen and (max-width: 768px) {
@@ -16,20 +9,32 @@
 	}
 
 	ul {
+		padding: 2.7em 0;
 		list-style: none;
-		padding: 0 0 1em 0;
 		margin: 0;
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		justify-items: center;
+		grid-template-columns: repeat(4, 1fr);
+		grid-column-gap: 1.2em;
+		grid-row-gap: .5em;
 		@media screen and (max-width: 768px) {
 			display: none;
-			// grid-template-columns: 1fr 1fr;
 		}
 		li {
-			text-align: center;
-			padding: 0 0.75rem;
-			white-space: nowrap;
+			cursor: pointer;
+			height: 100%;
+			padding: .5em 1em;
+			color: #ffffff;
+			font-family: 'Montserrat', sans-serif;
+			font-size: 21px;
+			font-weight: 400;
+			border-radius: 0 1em;
+			background-color: #3a3f46;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			span {
+				font-weight: 700;
+			}
 		}
 	}
 }
