--- a/src/components/sidebar/mob-sidebar.module.scss
+++ b/src/components/sidebar/mob-sidebar.module.scss
@@ -1,22 +1,22 @@
 .sidebar {
   position: absolute;
-	left: 0;
-	bottom: 0;
+  left: 0;
+  bottom: 0;
   top: 5rem;
-  background-color: #fff;
+  background-color: #383d43;
   box-shadow: 5px 5px 25px 3px #999;
   padding: 1em;
   z-index: 999;
-	display: none;
-	max-width: 100vw;
-	width: 22em;
-	height: 100%;
+  display: none;
+  max-width: 100vw;
+  width: 22em;
+  height: 100%;
 }
 
 .sidebar_toggler {
   display: none;
   position: absolute;
-  z-index: 999; 
+  z-index: 999;
 }
 
 @media screen and (max-width: 1024px) {
@@ -27,44 +27,42 @@
 }
 
 .sidebar_messages {
-	padding: .5em;
-	img {
-		width: 100%;
-		background-color: #ddd;
-		border-radius: .5em;
-	}
+  padding: 0.5em;
+  img {
+    width: 100%;
+    background-color: #ddd;
+    border-radius: 0.5em;
+  }
 }
-
 
 .sidebar_user {
-	header {
-		padding: 2em 1em;
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		align-content: center;
-		align-items: center;
-		justify-content: center;
-		grid-gap: 1em;
-	}
+  header {
+    padding: 2em 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 1em;
+  }
 }
 .user_ava {
-	border-radius: 50%;
-	overflow: hidden;
+  border-radius: 50%;
+  overflow: hidden;
 }
 .user_info {
-	display: grid;
-	grid-gap: 0.7em;
+  display: grid;
+  grid-gap: 0.7em;
 }
 .username {
-	font-weight: 500;
+  font-weight: 500;
 }
 .user_rating {
-	padding-bottom: 0.3em;
+  padding-bottom: 0.3em;
 }
 .user_location {
-	font-weight: 500;
-	img {
-		margin-right: 0.6em;
-	}
+  font-weight: 500;
+  img {
+    margin-right: 0.6em;
+  }
 }
-
