--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -32,6 +32,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
+			line-height: 1.4em;
 			span {
 				font-weight: 700;
 			}
