--- a/src/components/main-list/desires-list.module.scss
+++ b/src/components/main-list/desires-list.module.scss
@@ -1,13 +1,11 @@
-.main_list_wrap {
-  // margin-top: 1em;
-  display: grid;
-  grid-gap: 1em;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');
 
-  h3 {
-    text-align: center;
-    padding: 0.8em 1em;
-    background-color: #ffb400;
-  }
+.main_page {
+  padding: 2rem 4.5rem;
+}
+
+.main_list_wrap {
+
 }
 .main_list_control {
   @media screen and (max-width: 756px) {
@@ -15,10 +13,10 @@
   }
 }
 .list_control {
-  background-color: #fff;
+  background: none;
   display: grid;
   grid-template-columns: auto auto;
-  padding: 1em 1em;
+  padding: 0 1em;
   justify-content: space-between;
   align-items: center;
   font-weight: 700;
@@ -35,13 +33,36 @@
     align-content: center;
     margin: 0;
     span {
-      padding: 0.1em 0 0 0;
+      color: #ffffff;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 21px;
+      font-weight: 400;
+      .select_arrow {
+        margin-left: 1em;
+        margin-right: .3em;
+        font-weight: 800;
+      }
     }
     select {
-      width: 100%;
-      padding: 0.3em 2em 0.3em 1em;
+      padding: .5em 1em .5em 0;
+      background: none;
+      border: none;
       appearance: none;
-      border: 2px solid #bebebe;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      color: #ffffff;
+      width: 10em;
+      font-size: 21px;
+      option {
+        color: #ffffff;
+        font-family: 'Montserrat', sans-serif;
+        //font-size: 21px;
+        font-weight: 400;
+        background-color: #383d43;
+      }
+      &:focus {
+        outline: none;
+      }
     }
     @media screen and (max-width: 756px) {
       grid-auto-flow: row;
@@ -53,17 +74,24 @@
   div {
     display: grid;
     grid-auto-flow: column;
-    grid-gap: 1em;
     span {
-      padding: 0.3em 1em;
-      border-radius: 0.2em;
+      color: #ffffff;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 21px;
+      font-weight: 700;
+      text-transform: uppercase;
       cursor: pointer;
+      &.active_link {
+        color: #f5c99e;
+      }
+      &:first-child {
+        padding: .5em 1em .5em 0;
+      }
+      &:last-child {
+        padding: .5em 0 .5em 1em;
+      }
     }
   }
-}
-.active_black {
-  background-color: #000;
-  color: #fff;
 }
 
 .main_list {
@@ -74,7 +102,7 @@
     display: grid;
     grid-template-columns: 24% 24% 24% 24%;
     grid-column-gap: 1.3%;
-    grid-row-gap: 1em;
+    grid-row-gap: 2em;
     @media screen and (max-width: 768px) {
       grid-template-columns: 1fr;
     }
@@ -85,8 +113,9 @@
 .card {
   color: #383b42;
   position: relative;
-  height: 27em;
-  background-color: #ffb400;
+  //height: 27em;
+  border-radius: 1em;
+  background-color: #3a3f46;
   display: grid;
   grid-template-rows: 3fr 1fr;
   overflow: hidden;
@@ -96,7 +125,7 @@
   position: relative;
 }
 .card_header_control {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #3a3f46;
   z-index: 5;
   width: 100%;
   position: absolute;
@@ -109,9 +138,21 @@
   justify-content: space-between;
   span {
     cursor: pointer;
-    padding: 0.5em 1em;
+    padding: 0.6em 1em;
     img {
       width: 1.5em;
+    }
+  }
+  .menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    i {
+      display: inline-block;
+      width: 5px;
+      height: 5px;
+      background-color: #ffffff;
+      border-radius: 50%;
     }
   }
 }
@@ -126,32 +167,46 @@
 }
 .card_info {
   position: relative;
-  padding: 1em;
-  background-color: #fff;
+  padding: 0 1em 1em 1em;
+  display: grid;
+  align-content: stretch;
+  height: 7em;
+  background-color: #3a3f46;
   h5 {
+    height: 2em;
+    width: 75%;
     a {
-      font-weight: 500;
+      color: #ffffff;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 17px;
+      font-weight: 700;
     }
   }
 }
 .card_price {
   white-space: nowrap;
-  color: #383b42;
-  font-weight: 500;
-  font-size: 1.8em;
+  color: #ffffff;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 21px;
   font-weight: 700;
-  // letter-spacing: 7px;
+  span {
+    font-size: 29px;
+  }
 }
 
 .card_elipse {
   position: absolute;
   top: 0;
   right: 1em;
-  width: 3.5em;
-  height: 3.5em;
+  width: 4.3em;
+  height: 4.3em;
   background-color: #383b42;
   border-radius: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-3em);
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .toast {
@@ -182,12 +237,4 @@
       background-color: #fafafa;
     }
   }
-}
-.success_alert {
-  position: absolute;
-  width: fit-content;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
 }
