--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -13,34 +13,65 @@
 	}
 }
 
+.main_list {
+	padding-top: 1em;
+	ul {
+		padding: 0;
+		list-style: none;
+		display: grid;
+		grid-template-columns: 24% 24% 24% 24%;
+		grid-column-gap: 1.3%;
+		grid-row-gap: 2em;
+		@media screen and (max-width: 768px) {
+			grid-template-columns: 1fr;
+		}
+	}
+}
+
 // lot
 .card {
 	color: #383b42;
 	position: relative;
-	height: 29em;
-	background-color: #0c9bb5;
+	//height: 27em;
+	border-radius: 1em;
+	background-color: #3a3f46;
 	display: grid;
 	grid-template-rows: 3fr 1fr;
 	overflow: hidden;
+	position: relative;
 }
 .card_header {
+	position: relative;
 }
 .card_header_control {
+	background-color: #3a3f46;
 	z-index: 5;
-	background-color: rgba(255, 255, 255, 0.5);
 	width: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
-	display: flex;
+	display: grid;
+	grid-auto-flow: column;
 	align-items: center;
 	align-content: center;
 	justify-content: space-between;
 	span {
 		cursor: pointer;
-		padding: 0.5em 1em;
+		padding: 0.6em 1em;
 		img {
 			width: 1.5em;
+		}
+	}
+	.menu {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		gap: 10px;
+		i {
+			display: inline-block;
+			width: 5px;
+			height: 5px;
+			background-color: #ffffff;
+			border-radius: 50%;
 		}
 	}
 }
@@ -49,49 +80,73 @@
 	height: 20em;
 	overflow: hidden;
 	display: grid;
-	justify-content: center;
+	justify-items: center;
+	//justify-content: center;
 	align-items: center;
 }
 .card_info {
 	position: relative;
-	padding: 1em;
-	background-color: #fff;
+	padding: 0 1em 1em 1em;
+	display: grid;
+	height: 7em;
+	background-color: #3a3f46;
 	h5 {
-		max-height: 2em;
-		font-weight: 500;
+		width: 75%;
+		height: 2em;
+		a {
+			color: #ffffff;
+			font-family: 'Montserrat', sans-serif;
+			font-size: 17px;
+			font-weight: 700;
+		}
 	}
 }
 .card_price {
 	white-space: nowrap;
-	color: #383b42;
-	font-weight: 500;
-	font-size: 1.8em;
+	color: #ffffff;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 21px;
 	font-weight: 700;
-	// letter-spacing: 7px;
+	span {
+		font-size: 29px;
+	}
 }
+
 .progress_bar {
 	display: grid;
-	grid-template-columns: 1fr auto;
+	grid-template-columns: 5fr 1fr;
+	width: 100%;
 	align-items: center;
-	padding-top: 0.8em;
+	div {
+		background: none;
+		height: 7px;
+		div {
+			height: 7px;
+			background-color: #c78550;
+		}
+	}
 	span {
-		padding-left: 0.8em;
-		font-weight: 500;
-		font-size: 1.2em;
+		color: #c78550;
+		font-family: 'Montserrat', sans-serif;
+		font-size: 22px;
 		font-weight: 700;
+		padding-left: .5em;
 	}
 }
 
 .card_elipse {
-	z-index: 1;
 	position: absolute;
 	top: 0;
 	right: 1em;
-	width: 3.5em;
-	height: 3.5em;
+	width: 4.3em;
+	height: 4.3em;
 	background-color: #383b42;
 	border-radius: 50%;
-	transform: translateY(-50%);
+	transform: translateY(-3em);
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .toast {
@@ -125,11 +180,4 @@
 		}
 	}
 }
-.success_alert {
-	position: absolute;
-	min-width: 10em;
-	top: 30%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 1;
-}
+
