--- a/src/components/sidebar/control.module.scss
+++ b/src/components/sidebar/control.module.scss
@@ -1,29 +1,37 @@
 
 .sidebar_user_control {
+  transform: translateY(-4rem);
+  background-color: #3a3f46;
+  border-radius: 1em;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 0.1em;
-  padding: .2em;
+  grid-template-columns: 4fr 7fr;
+  align-items: center;
+  div:nth-child(2) {
+    white-space: nowrap;
+  }
+  .arrow {
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 19px;
+    font-weight: 900;
+    padding: .5em 5%;
+    display: inline-block;
+  }
   .link {
-    color: #000;
-    font-weight: 500;
-    background-color: #dedede;
-    text-align: center;
-    font-size: 0.9em;
-    padding: 0.2em 0 0.2em 0;
-    position: relative;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 19px;
+    font-weight: 700;
+    width: 8em;
     &:hover {
-      color: #fff;
     }
   }
   .aside_btn_active {
-    background-color: #52646a;
-    color: #fff;
+
   }
 }
 
 .bell {
-  width: 1.3em;
   margin-left: .3em;
 }
 
