--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -1,58 +1,72 @@
+//@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');
+
 .sidebar {
-	background: linear-gradient(135deg, #3d4249, #31353b);
-	min-height: 100vh;
-	border-radius: 1em;
+  background: linear-gradient(135deg, #3d4249, #31353b);
+  min-height: 100vh;
+  height: 100%;
+  border-radius: 1em;
+  padding: 3rem 3rem;
 
-	@media screen and (max-width: 1024px) {
-		display: none;
-	}
+  @media screen and (max-width: 1024px) {
+    display: none;
+  }
 }
 
-.sidebar_user {
-	header {
-		padding: 2em 1em;
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		align-content: center;
-		align-items: center;
-		justify-content: center;
-		grid-gap: 1em;
-	}
+.sidebar_logo {
+  display: flex;
+  justify-content: flex-end;
+  img {
+    width: 70%;
+    max-width: 90%;
+  }
 }
+
 .user_bar {
-	padding-bottom: 2em;
+  padding-bottom: 2em;
+  display: grid;
+  grid-template-columns: 4fr 7fr;
+  align-items: center;
 }
 .user_ava {
-	border-radius: 50%;
-	overflow: hidden;
-	height: 10em;
-	border: 1px solid #ccc;
-	width: 10em;
-	margin: 2em auto;
-	display: grid;
-	justify-items: center;
-	align-items: center;
-	img {
-		//width: 100%;
-		height: 100%;
-	}
+  z-index: 1;
+  border-radius: 50%;
+  overflow: hidden;
+  height: 10em;
+  border: 5px solid #c78550;
+  width: 10.1em;
+  padding: 0.7em;
+  margin: 0 0 0 -0.4em;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  img {
+    //width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
 }
 .user_info {
-	display: grid;
-	grid-gap: 0.7em;
-}
-.username {
-	font-weight: 500;
-	text-align: center;
-}
-.user_rating {
-	padding-bottom: 0.3em;
-}
-.user_location {
-	text-align: center;
-	font-weight: 500;
-	img {
-		margin-right: 0.6em;
-	}
+  .username {
+    color: #ffffff;
+    font-family: "Montserrat", sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+  }
+  .user_rating {
+    display: inline-block;
+    span {
+      color: #fff;
+      font-size: 2.1em;
+    }
+  }
 }
 
+.sidebar_component {
+  background: linear-gradient(-37deg, #1e1f1e 0%, #383b42 100%);
+  min-height: 80vh;
+  height: 100%;
+  display: grid;
+  margin-top: -5rem;
+  padding: 1em;
+  border-radius: 0 0 1em 1em;
+}
